Elimina operación PUT en la cita ya que está cubierta por cancelación de la cita
